jujugui/static/gui/src/app/components/deployment-bar/_deployment-bar.scss
.deployment-bar {
    height: 40px;
    text-align: right;

    &__import,
    &__export {
        margin-right: 10px;
    }

    &__import {
        @extend %deployment-bar__links;
    }

    &__export {
        @extend %fade-in;
        @extend %deployment-bar__links;

        &:before {
            content: '';
            border-right: 1px solid $mid-grey;
            margin-right: 10px;
        }
    }

    &__file {
        @extend %deployment-bar__links;
        visibility: hidden;
        width: 0;
    }

    &__deploy {
        @extend %floating-panel;
        display: inline-block;
        margin-left: 10px;
    }

    &__install-button {
        @extend %fade-in;
        @extend %floating-panel;
        display: inline-block;
        margin-left: 10px;
        padding: 10px;
        color: $cool-grey;
    }

    &--initial {
        .deployment-bar {
            &__export {
                display: none;
            }
        }

        .generic-button {
            display: none;
        }
    }
}

%deployment-bar__links {
    &:focus,
    &:active,
    &:hover {
        text-decoration: underline;
    }
}

